--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "parcel-build": "parcel build index.html && cp _redirects ./dist/",
-    "serve": "parcel index.html"
+    "serve": "parcel index.html",
+    "app:watch": "nodemon --watch ./server -e js ./server/app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +16,16 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.1",
     "node": "^16.13.1",
+    "nodemon": "^2.0.22",
     "prettier": "1.19.1"
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "express": "^4.18.2",
     "html-literal": "^1.1.0",
     "lodash": "^4.17.21",
+    "mongodb": "^5.5.0",
+    "mongoose": "^6.11.1",
     "navigo": "^8.11.1",
     "parcel": "^2.8.3",
     "yargs-parser": ">=13.1.2"
