--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,11 +15,9 @@
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "stylelint.enable": true,
-  "workbench.colorTheme": "Material Theme",
+  "workbench.colorTheme": "codeSTACKr Theme",
   "workbench.enableExperiments": false,
-  "workbench.iconTheme": "material-icon-theme",
+  "workbench.iconTheme": "vs-seti",
   "workbench.view.alwaysShowHeaderActions": true,
-  "editor.rulers": [
-      100, 120
-  ]
+  "editor.rulers": [100, 120]
 }
