--- a/package.json
+++ b/package.json
@@ -11,15 +11,29 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^5.7.1",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "events": "^3.3.0",
     "node": "^16.13.1",
     "nodemon": "^2.0.22",
-    "prettier": "1.19.1"
+    "path-browserify": "^1.0.1",
+    "prettier": "1.19.1",
+    "process": "^0.11.10",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "string_decoder": "^1.3.0",
+    "url": "^0.11.0",
+    "util": "^0.12.5"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.11.16",
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "html-literal": "^1.1.0",
